    Add AVStream.codecpar, deprecate AVStream.codec.
* Bugfix: Fix lost frames at end of files (files where cut short)
* Bugfix: Fix sharing problems with sqlite database when accessed by multiple instances.
* Bugfix: Fix crash when video files were transcoded to audio only (e.g. mp3)
* Bugfix: Make WAV size prediction more accurate

nschlia@oblivion-software.de

Important changes in 1.2 (2018-04-03)

Changes in this release:
* Fix issue #4: File size was wrong when file was first accessed.
* Fix issue #5: Fix crashes when transcoding.
* Feature: None. This a bug fix release.

nschlia@oblivion-software.de

Important changes in 1.1 (2018-03-19)

Changes in this release:
* Fix: make clean for checks did not delete all logs
* Feature request #1: WAV output support (by github user Avuton)
* Feature: OGG output support
* Fix: Did not write correct ID3v2 headers (thanks for the fix to gitbug user sdrik)
* Feature: Include configure command line arguments and host OS in "-V" option.
* Feature: Add --videoheight=HEIGHT and --videowidth=WIDTH parameters to allow
  video size change. If source video is larger it will be scaled down.
  If already smaller the size will be left as is. You should only set
  one parameter, if both are set the aspect ratio may be changed and the
  result look strange.
* Feature: Added clear_cache option to clear the whole cache everytime 
  the application is started.
* Note: Dropped ISMV option as it did not work as expected, especially creating an
  mp4 on-the-fly did not work. The streamlined mp4 format already does the work.

nschlia@oblivion-software.de

Important changes in 1.00 (2018-01-19)

Changes in this release:
* Cheers! Made it! This is release version 1.0, the first production release.
* Fixed compile for FFmpeg versions prior to 3.0.

nschlia@oblivion-software.de

Important changes in 0.95 (2017-12-29)

NOTE: The cache format has changed and is not compatible with prior versions.